--- a/RockWeb/Themes/Flat/Styles/theme.css
+++ b/RockWeb/Themes/Flat/Styles/theme.css
@@ -1979,6 +1979,7 @@ dl:not(.dl-horizontal) dd {
     7. Reusable classes
     8. Column Types
     9. Row Types
+    10. Responsive Overrides
 
 */
 .dropdown-menu > li.checkbox-row {
@@ -2484,6 +2485,14 @@ td.grid-col-actions {
 }
 .table > tbody > tr.grid-section-header:hover > td {
   background-color: #ecf0f1 !important;
+}
+.table-responsive[data-pattern="priority-columns"] > .table > thead > tr > th,
+.table-responsive[data-pattern="priority-columns"] > .table > tbody > tr > th,
+.table-responsive[data-pattern="priority-columns"] > .table > tfoot > tr > th,
+.table-responsive[data-pattern="priority-columns"] > .table > thead > tr > td,
+.table-responsive[data-pattern="priority-columns"] > .table > tbody > tr > td,
+.table-responsive[data-pattern="priority-columns"] > .table > tfoot > tr > td {
+  white-space: inherit;
 }
 /*
     Used to manage styles for specific blocks.
